fix css to stretch background image

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -93,7 +93,7 @@ footer {
 }
 
 .wind-background {
-    background-image: url("../imgs/wind-large.jpg");
+    background-image: url("../imgs/wind-medium.jpg");
     height: 100%;
 }
 
